# perk-ComfyVersionBumper

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Cross.toml  LICENSE  LICENSE.md  NOTICE  README  README-DEV.md  README.md  SOURCE_MODEL
.cargo/: config.toml
.changelogs/: 0-10-11__20260421-153106-060.md  20260413-135427-305-0-6-0.md  20260413-161233-087-0-6-1.md  20260414-164146-120-0-7-0.md  20260414-204311-565-0-7-1.md  20260415-081245-651-0-7-2.md  20260415-134754-486-0-7-3.md  README.md  v0-10-10__20260420-223711-577.md  v0-10-7__20260419-210156-274.md  v0-11-2__20260422-121345-411.md  v0-11-3__20260422-172036-001.md  v0-12-4__20260423-165842-294.md  v0-13-2__20260424-145514-720.md  v0-14-2__20260425-164326-894.md  v0-16-5__20260426-230020-105.md  v0-17-5__20260427-220524-725.md  v0-17-6__20260501-081248-962.md  v0-19-1__20260506-151315-915.md  v0-19-2__20260506-175354-981.md  v0-19-3__20260506-182602-576.md  v0-19-4__20260506-184242-835.md  v0-19-5__20260506-192750-141.md  v0-20-2__20260507-143616-137.md  v0-21-4__20260508-104655-135.md  v0-22-7__20260510-173836-546.md  v0-23-6__20260511-162637-248.md  v0-25-3__20260513-094635-708.md  v0-25-4__20260513-102536-460.md  v0-26-0__20260513-203609-734.md  v0-8-2__20260416-232142-822.md  v0-8-3__20260417-200232-455.md  v0-9-0__20260417-201834-488.md  v0-9-1__20260417-224030-175.md
.comfygit/syncmem/: stdchlg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/shell/: ComfyGit.psm1  cg  cg.cmd  cg.fish  cg.ps1  cg.sh
scripts/: install-shell-integration.ps1  install-shell-integration.sh
src/: app.rs  branding.rs  changelog.rs  changelog_tp.rs  chl_vrtr.rs  cli.rs  config.rs  dialogs.rs  git.rs  git_alt.rs  git_br.rs  git_br_end.rs  git_flow.rs  git_locmerge.rs  git_mg.rs  git_new.rs  git_pr.rs  git_rrt.rs  git_stt.rs  lib.rs  main.rs  mmr.rs  overview-pg.rs  overview.rs  p-s-s.rs  project_edit.rs  project_wizard.rs  render.rs  rls-now-inj.rs  rls-now-qd.rs  rls-now.rs  targets.rs  tiles.rs  ui.rs  versioning.rs
