[package]
name = "comfygit"
version = "0.19.0"
edition = "2024"
rust-version = "1.95"
description = "Ratatui public edition of the original Comfy Version Bumper"
authors = ["ComfyHome™ <dev@comfyhome.io>"]
license = "SA-PS"
homepage = "https://github.com/comfy-home/ComfyGit"
repository = "https://github.com/comfy-home/ComfyGit"
readme = "README.md"
keywords = ["tui", "cli", "ratatui", "comfy", "comfyhome", "versioning", "version-management", "release-management", "version-bump", "git", "changelog", "semantic-versioning", "semver", "calver"]
categories = ["development-tools", "command-line-utilities", "command-line-interface"]

[package.metadata]
license-link = "https://github.com/comfy-home/ComfyGit?tab=License-1-ov-file"
minimum_required = "0.17.0"
minimum_required_reason = "..."

[[bin]]
name = "cg"
path = "src/main.rs"

[[bin]]
name = "ComfyGit"
path = "src/bin/cg-bin.rs"

[workspace]

[dependencies]
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
ctrlc = "3"
directories = "6"
document-features = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
ratatui = "0.30"
ratatui-comfy-toaster = { path = "src/components/comfy-toaster" }
ratatui-explorer = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
toml = "1"
toml_edit = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.7"
tui-tabs = "0.1.1"
tui-overlay = "0.1.2"
tui-markdown = "0.3.7"
tui-checkbox = "0.4.4"
unicode-segmentation = "1"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
document-features = "0.2"

[build-dependencies]
document-features = "0.2"
